--- a/index.html
+++ b/index.html
@@ -292,17 +292,6 @@
                 <p class="subtitle">Betrouwbare beoordelingen van de nieuwste elektronica. Klik op een product voor gedetailleerde informatie.</p>
             </div>
         </header>
-        
-        <div class="container">
-            <div class="instructions">
-                <h3>Hoe producten toevoegen/wijzigen:</h3>
-                <ul>
-                    <li>Voeg een nieuw product toe door een object toe te voegen aan de <strong>products</strong> array in de JavaScript code</li>
-                    <li>Elk product moet hebben: id, name, price, image, rating, category, description en specifications</li>
-                    <li>Producten worden automatisch weergegeven op de homepage</li>
-                    <li>Klik op een product om naar de detailpagina te gaan</li>
-                </ul>
-            </div>
             
             <div class="products-grid" id="products-container">
                 <!-- Producten worden hier dynamisch geladen -->
@@ -351,18 +340,18 @@
             },
             {
                 id: 2,
-                name: "Apple iPhone 14 Pro",
-                price: 1099.00,
-                image: "https://images.unsplash.com/photo-1592750475338-74b7b21085ab?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1074&q=80",
+                name: "Apple iPhone 15 Pro",
+                price: 700.-,
+                image: "https://www.backmarket.nl/cdn-cgi/image/format%3Dauto%2Cquality%3D75%2Cwidth%3D640/https://d2e6ccujb3mkqf.cloudfront.net/de98239a-115a-4aa5-8d7f-b22b61b36775-1_7600e302-13b8-4961-ae82-9a088681fec3.jpg",
                 rating: 4.8,
                 category: "Smartphone",
-                description: "De iPhone 14 Pro beschikt over een revolutionaire Dynamic Island, een krachtige A16 Bionic-chip en een professionele camera-systeem. Een echte game-changer in de smartphone-industrie.",
+                description: "De iPhone 15 Pro is een premium smartphone die is ontworpen met een titaniumbehuizing en een Ceramic Shield aan de voorkant. Het display heeft ronde hoeken die de vorm van het stijlvolle design volgen, met een diagonale grootte van 15,54 cm. De iPhone 15 Pro is IP68 beveiligd, wat betekent dat het stofbestendig is tot 30 minuten onder water tot 6 meter diep. Het bevat een Pro-camera-systeem met een telelens van 120 mm, waarmee tot vijf keer kan worden ingezoomd. De iPhone 15 Pro is ook uitgerust met de TrueDepth-camera voor gezichts-herkenning en heeft een M3-processor voor snelle prestaties.",
                 specifications: [
                     "6,1-inch Super Retina XDR display",
                     "A16 Bionic chip",
                     "48MP Hoofdcamera",
                     "Dynamic Island",
-                    "iOS 16"
+                    "iOS 26"
                 ]
             },
             {
